--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /build/Desktop-Debug/.qtc_clangd/.cache/clangd/index
 build/Desktop-Debug/.qtc_clangd/compile_commands.json
 /build/Desktop-Debug
+emitterwatcher.pro.user
+emitterwatcher.pro.user.08d4e79
+*.user
